<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
        <groupId>com.github.sumeetchhetri.gatf</groupId>
        <artifactId>gatf-parent</artifactId>
        <version>1.1.2</version> 
    </parent>
    
	<artifactId>gatf-plugin</artifactId>
	<packaging>maven-plugin</packaging>
	<name>gatf-plugin</name>
	
	<dependencies>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>3.5.3</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.apache.maven.plugin-tools</groupId>
			<artifactId>maven-plugin-annotations</artifactId>
			<version>3.5.1</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-artifact</artifactId>
			<version>3.5.3</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-core</artifactId>
			<version>3.5.3</version>
			<scope>provided</scope>
		</dependency>
	
		<dependency>
			<groupId>com.github.sumeetchhetri.gatf</groupId>
			<artifactId>gatf-alldep-jar</artifactId>
			<version>1.1.2</version>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>java.xml</arg>
						<arg>--add-modules</arg>
						<arg>jdk.compiler</arg>
					</compilerArgs>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>3.6.2</version>
                <configuration>
                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                </configuration>
                <executions>
	                <execution>
						<id>default-descriptor</id>
						<phase>process-classes</phase>
					</execution>
					<!-- if you want to generate help goal -->
					<execution>
						<id>help-goal</id>
						<goals>
							<goal>helpmojo</goal>
						</goals>
					</execution>
            	</executions>
            </plugin>
		</plugins>
	</build>
</project>
